Add python 3 support

--- a/debian/rules
+++ b/debian/rules
@@ -6,4 +6,4 @@ export DH_VERBOSE = 1
 export PYBUILD_NAME = eht-imaging
 
 %:
-	dh $@ --with python2 --buildsystem=pybuild
+	dh $@ --with python2,python3 --parallel --buildsystem=pybuild
