--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ X-Python3-Version: >= 3.4
 
 Package: python-eht-imaging
 Architecture: any
-section: python
+Section: python
 Multi-Arch: foreign
 Depends:
  ${python:Depends},
@@ -56,7 +56,7 @@ Description: Python modules for simulating and manipulating VLBI data
 
 Package: python3-eht-imaging
 Architecture: any
-section: python
+Section: python
 Multi-Arch: foreign
 Depends:
  ${python3:Depends},
@@ -74,7 +74,7 @@ Description: Python modules for simulating and manipulating VLBI data
 
 Package: eht-imaging
 Architecture: any
-section: python
+Section: python
 Multi-Arch: foreign
 Depends:
  ${misc:Depends},
